# QuantStrategyPlugins

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: market-regime-control-plan.md  market-regime-control-plan.zh-CN.md
docs/examples/: strategy_plugins.example.toml
scripts/: backtest_macro_risk_governor_params.py  backtest_volatility_delever_thresholds.py  build_crisis_response_shadow_signal.py  gate_codex_app_review.py  run_strategy_plugins.py
src/quant_strategy_plugins/: __init__.py  ai_audit.py  artifacts.py  crisis_regime_guard_research.py  crisis_response_research.py  crisis_response_shadow_plugin.py  macro_external_context.py  macro_risk_governor_plugin.py  market_regime_control_plugin.py  panic_reversal_shadow_plugin.py  strategy_plugin_runner.py  taco_rebound_shadow_plugin.py  volatility_delever_price_rebound.py
tests/: test_ai_audit.py  test_crisis_response_shadow_plugin.py  test_gate_codex_app_review.py  test_macro_external_context.py  test_macro_risk_governor_plugin.py  test_market_regime_control_plugin.py  test_panic_reversal_shadow_plugin.py  test_strategy_plugin_runner.py  test_taco_rebound_shadow_plugin.py  test_volatility_delever_price_rebound.py
