[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-strategy-plugins"
version = "0.1.7"
description = "Open sidecar strategy plugins that emit QuantPlatformKit-compatible signal artifacts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "QuantStrategyLab" }
]
dependencies = [
  "pandas>=2.0",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
test = ["build>=1.2", "pytest>=8", "ruff>=0.8"]

[project.scripts]
qsp-build-crisis-response-shadow-signal = "quant_strategy_plugins.crisis_response_shadow_plugin:main"
qsp-build-macro-external-context = "quant_strategy_plugins.macro_external_context:main"
qsp-build-macro-risk-governor-signal = "quant_strategy_plugins.macro_risk_governor_plugin:main"
qsp-build-taco-rebound-shadow-signal = "quant_strategy_plugins.taco_rebound_shadow_plugin:main"
qsp-build-panic-reversal-shadow-signal = "quant_strategy_plugins.panic_reversal_shadow_plugin:main"
qsp-run-strategy-plugins = "quant_strategy_plugins.strategy_plugin_runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
